--- a/package.json
+++ b/package.json
@@ -75,7 +75,6 @@
     "truffle-flattener": "^1.5.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "3.3.0-solc-0.7",
-    "eth-token-recover": "3.3.0"
+    "@openzeppelin/contracts": "3.3.0-solc-0.7"
   }
 }
